bridge/base/sqlserver-deployment.yaml
#! sqlserver-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sqlserver
    namespace: lehongphat
    labels:
        com.docker.compose.project: lehongphat
        com.docker.compose.service: sqlserver
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: lehongphat
            com.docker.compose.service: sqlserver
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: lehongphat
                com.docker.compose.service: sqlserver
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: sqlserver-container
                  image: mcr.microsoft.com/mssql/server:2022-latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: sqlserver-1433
                      containerPort: 1433
                  volumeMounts:
                    - name: var-opt-mssql
                      mountPath: /var/opt/mssql
            volumes:
                - name: var-opt-mssql
                  persistentVolumeClaim:
                    claimName: sqlserver-sql-data
