bridge/base/springboot-app-expose.yaml
#! springboot-app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: springboot-app
    namespace: lehongphat
    labels:
        com.docker.compose.project: lehongphat
        com.docker.compose.service: springboot-app
spec:
    selector:
        com.docker.compose.project: lehongphat
        com.docker.compose.service: springboot-app
    ports:
        - name: springboot-8080
          port: 8080
          targetPort: springboot-8080
