bridge/base/sqlserver-expose.yaml
#! sqlserver-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: sqlserver
    namespace: lehongphat
    labels:
        com.docker.compose.project: lehongphat
        com.docker.compose.service: sqlserver
spec:
    selector:
        com.docker.compose.project: lehongphat
        com.docker.compose.service: sqlserver
    ports:
        - name: sqlserver-1433
          port: 1433
          targetPort: sqlserver-1433
